- Import process can now handle multi-page tiffs - Watermarking is now optional - Updated default settings for internal distribution - Using ProcessBuilder for spawning process
git-svn-id: https://jacq.svn.sourceforge.net/svnroot/jacq/branches/jacq-servlet@177 7b31dc5a-b546-473b-86cc-9bf611700e06